# meshit

./: .gitignore  CMakeLists.txt  COPYRIGHT  Makefile  README.md
examples/: CMakeLists.txt  circles.cpp  load_save.cpp  palpo.cpp  read_argv.cpp  square_argv.cpp  square_hole.cpp  square_istream.cpp
examples/from_meshit/: palpo.cpp  square_hole.cpp  square_inline.cpp  square_istream.cpp
meshgen/: CMakeLists.txt
meshgen/csg/: algprim.cpp  algprim.hpp  brick.cpp  bspline2d.cpp  csgeom.cpp  csgeom.hpp  csgparser.cpp  csgpkg.cpp  curve2d.cpp  edgeflw.cpp  explicitcurve2d.cpp  explicitcurve2d.hpp  extrusion.cpp  gencyl.cpp  genmesh.cpp  identify.cpp  identify.hpp  meshsurf.cpp  meshsurf.hpp  polyhedra.cpp  polyhedra.hpp  revolution.cpp  singularref.cpp  singularref.hpp  solid.cpp  solid.hpp  specpoin.cpp  specpoin.hpp  spline3d.cpp  spline3d.hpp  surface.cpp  surface.hpp  triapprox.cpp  triapprox.hpp  vscsg.cpp
meshgen/general/: array.cpp  array.hpp  bitarray.cpp  bitarray.hpp  dynamicmem.cpp  dynamicmem.hpp  flags.cpp  flags.hpp  hashtabl.cpp  hashtabl.hpp  mystring.cpp  mystring.hpp  netgenout.hpp  ngexception.cpp  ngexception.hpp  optmem.cpp  optmem.hpp  parthreads.hpp  seti.cpp  seti.hpp  sort.cpp  sort.hpp  spbita2d.cpp  spbita2d.hpp  symbolta.cpp  symbolta.hpp  table.cpp  table.hpp  template.hpp
meshgen/geom2d/: genmesh2d.cpp  geom2dmesh.cpp  geom2dmesh.hpp  geom2dpkg.cpp  geometry2d.cpp  geometry2d.hpp  vsgeom2d.cpp  vsgeom2d.hpp
meshgen/gprim/: adtree.cpp  adtree.hpp  geom2d.cpp  geom2d.hpp  geom3d.cpp  geom3d.hpp  geomfuncs.cpp  geomfuncs.hpp  geomobjects.hpp  geomops.hpp  geomtest3d.cpp  geomtest3d.hpp  spline.cpp  spline.hpp  splinegeometry.cpp  splinegeometry.hpp  transform3d.cpp  transform3d.hpp
meshgen/include/: meshgen.hpp  mydefs.hpp
meshgen/interface/: nginterface.cpp  nginterface_v2.cpp  read_fnf_mesh.cpp  readtetmesh.cpp  readuser.cpp  writeOpenFOAM15x.cpp  writeabaqus.cpp  writedolfin.cpp  writeelmer.cpp  writefeap.cpp  writefluent.cpp  writegmsh.cpp  writegmsh2.cpp  writejcm.cpp  writepermas.cpp  writetecplot.cpp  writetet.cpp  writetochnog.cpp  writeuser.cpp  writeuser.hpp  wuchemnitz.cpp
meshgen/linalg/: bfgs.cpp  densemat.cpp  densemat.hpp  linopt.cpp  linsearch.cpp  opti.hpp  polynomial.cpp  polynomial.hpp  vector.hpp
meshgen/meshing/: adfront2.cpp  adfront2.hpp  adfront3.cpp  adfront3.hpp  basegeom.cpp  basegeom.hpp  bcfunctions.cpp  bcfunctions.hpp  bisect.cpp  bisect.hpp  classifyhpel.hpp  clusters.cpp  clusters.hpp  curvedelems.cpp  curvedelems.hpp  delaunay.cpp  delaunay2d.cpp  findip.hpp  findip2.hpp  geomsearch.cpp  geomsearch.hpp  global.cpp  global.hpp  hprefinement.cpp  hprefinement.hpp  improve2.cpp  improve2.hpp  improve2gen.cpp  improve3.cpp  improve3.hpp  localh.cpp  localh.hpp  meshclass.cpp  meshclass.hpp  meshfunc.cpp  meshfunc.hpp  meshfunc2d.cpp  meshing2.cpp  meshing2.hpp  meshing3.cpp  (+29 more)
meshgen/occ/: Partition_Spliter.cxx  occconstruction.cpp  occgenmesh.cpp  occgeom.cpp  occgeom.hpp  occmeshsurf.cpp  occpkg.cpp  utilities.h  vsocc.cpp
meshgen/stlgeom/: meshstlsurface.cpp  meshstlsurface.hpp  stlgeom.cpp  stlgeom.hpp  stlgeomchart.cpp  stlgeommesh.cpp  stlline.cpp  stlline.hpp  stlpkg.cpp  stltool.cpp  stltool.hpp  stltopology.cpp  stltopology.hpp  vsstl.cpp  vsstl.hpp
meshgen/visualization/: importsolution.cpp  meshdoc.cpp  meshdoc.hpp  mvdraw.cpp  mvdraw.hpp  vsfieldlines.cpp  vsmesh.cpp  vssolution.cpp
meshit/: CMakeLists.txt  meshit.hpp
meshit/general/: array.cpp  array.hpp  autodiff.hpp  autoptr.hpp  bitarray.cpp  bitarray.hpp  block_allocator.cpp  block_allocator.hpp  dynamicmem.cpp  dynamicmem.hpp  flags.cpp  flags.hpp  hashtabl.cpp  hashtabl.hpp  index.hpp  logging.cpp  logging.hpp  mystring.cpp  mystring.hpp  netgenout.hpp  ngexception.cpp  ngexception.hpp  optmem.cpp  optmem.hpp  parthreads.hpp  seti.cpp  seti.hpp  sort.cpp  sort.hpp  spbita2d.cpp  spbita2d.hpp  symbolta.cpp  symbolta.hpp  table.cpp  table.hpp  template.hpp
meshit/geom2d/: genmesh2d.cpp  geom2dmesh.cpp  geom2dmesh.hpp  geometry2d.cpp  geometry2d.hpp
meshit/gprim/: adtree.cpp  adtree.hpp  geom2d.cpp  geom2d.hpp  geom3d.cpp  geom3d.hpp  geomfuncs.cpp  geomfuncs.hpp  geomobjects.cpp  geomobjects.hpp  geomops.hpp  geomops2.hpp  geomtest3d.cpp  geomtest3d.hpp  gprim.hpp  spline.cpp  spline.hpp  splinegeometry.cpp  splinegeometry.hpp  transform3d.cpp  transform3d.hpp
meshit/include/: meshit.hpp
meshit/interface/: writegmsh2.cpp  writeuser.cpp  writeuser.hpp
meshit/linalg/: bfgs.cpp  densemat.cpp  densemat.hpp  linopt.cpp  linsearch.cpp  opti.hpp  polynomial.cpp  polynomial.hpp  vector.hpp
meshit/meshing/: adfront2.cpp  adfront2.hpp  adfront3.cpp  adfront3.hpp  basegeom.cpp  basegeom.hpp  bisect.cpp  bisect.hpp  clusters.cpp  clusters.hpp  curvedelems.cpp  curvedelems.hpp  delaunay.cpp  delaunay2d.cpp  findip.hpp  findip2.hpp  geomsearch.cpp  geomsearch.hpp  global.cpp  global.hpp  hprefinement.cpp  hprefinement.hpp  improve2.cpp  improve2.hpp  improve2gen.cpp  improve3.cpp  improve3.hpp  localh.cpp  localh.hpp  mesh_class.cpp  mesh_class.hpp  mesh_generator.cpp  mesh_generator.hpp  mesh_optimize.cpp  mesh_optimize.hpp  mesh_refine.cpp  mesh_tools.cpp  mesh_types.cpp  mesh_types.hpp  meshclass.cpp  (+43 more)
