CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
    MESSAGE(FATAL_ERROR "In-source build prohibited.")
ENDIF()

PROJECT(meshit)

IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fpermissive -Wall")
ENDIF()
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBASE0")

SET(MESHIT_OUTPUT_PATH ${CMAKE_INSTALL_PREFIX})
SET(EXECUTABLE_OUTPUT_PATH ${MESHIT_OUTPUT_PATH}/bin)
SET(LIBRARY_OUTPUT_PATH ${MESHIT_OUTPUT_PATH}/lib)
SET(INCLUDE_OUTPUT_PATH ${MESHIT_OUTPUT_PATH}/include)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${EXECUTABLE_OUTPUT_PATH})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${EXECUTABLE_OUTPUT_PATH})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
INCLUDE_DIRECTORIES(${INCLUDE_OUTPUT_PATH})

##########
# meshit
##########

ADD_SUBDIRECTORY(meshit)

##########
# examples
##########

ADD_SUBDIRECTORY(examples)

##########
# Export
##########

IF(${MESHIT_EXPORT})
    SET(MESHIT_OUTPUT_PATH ${MESHIT_OUTPUT_PATH} PARENT_SCOPE)
ENDIF()

